Add Eslint refer 'airnbn' & fixed some issue

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,31 @@
 {
-  "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "node": true
-  }
+    "parser": "babel-eslint",
+    "env": {
+        "browser" : true,
+        "node"    : true,
+        "es6"     : true,
+    },
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "plugins": [
+        "react"
+    ],
+    "extends": "airbnb",
+    "rules": {
+        "semi": [2, "never"],
+        "comma-dangle": [2, "never"],
+        "arrow-body-style": [2, "always"],
+        "no-console": 0,
+        "indent": [2, 4],
+        "no-multiple-empty-lines": [2, {"max": 2}],
+
+        "react/jsx-indent": [2, 4],
+        "react/jsx-indent-props": [2, 4]
+
+    }
 }
