--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "React15-Todo-List",
   "version": "1.0.0",
-  "description": "A simple todo list app built with React, Redux and Webpack",
+  "description": "A simple todo list app built with React, Redux, Webpack and Eslint",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon server/server.js --ignore components",
