--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple todo list app built with React, Redux, Webpack and Eslint",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon server/server.js --ignore components",
+    "serve": "nodemon server/server.js --ignore components 8080",
     "lint": "./node_modules/.bin/eslint client/*.js components/*.js"
   },
   "repository": {
@@ -37,6 +37,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint-plugin-react": "^5.1.1",
+    "openurl": "^1.1.1"
   }
 }
