--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A simple todo list app built with React, Redux, Webpack and Eslint",
   "scripts": {
+    "build": "webpack --config webpack.config.prod.js --progress -p",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon server/server.js --ignore components 8080",
     "lint": "./node_modules/.bin/eslint client/*.js components/*.js"
