--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.2",
+    "babel-plugin-transform-runtime": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
@@ -39,6 +40,7 @@
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
-    "openurl": "^1.1.1"
+    "openurl": "^1.1.1",
+    "strip-loader": "^0.1.2"
   }
 }
