--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "A simple todo list app built with React, Redux, Webpack and Eslint",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js --progress -p",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon server/server.js --ignore components 8080",
-    "lint": "./node_modules/.bin/eslint client/*.js components/*.js"
+    "lint": "./node_modules/.bin/eslint client/*.js components/*.js",
+    "test-old": "mocha --compilers js:babel-register tests/**/*.spec.js --require ./tests/test_helper.js --recursive",
+    "test": "mocha tests/.setup.js tests/**/*.spec.js",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/CityRay/React15-Todo-List"
   },
-  "author": "Ray Lin",
-  "license": "ISC",
+  "author": "Ray Lin <ray102467@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/CityRay/React15-Todo-List/issues"
+  },
+  "license": "MIT",
   "dependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.2",
@@ -34,13 +39,20 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
+    "babel-register": "^6.8.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.3.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
+    "jsdom": "^9.1.0",
+    "mocha": "^2.4.5",
     "openurl": "^1.1.1",
+    "react-addons-test-utils": "^15.0.2",
+    "sinon": "^1.17.4",
     "strip-loader": "^0.1.2"
   }
 }
