Update Test Files & components

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "nodemon server/server.js --ignore components 8080",
     "lint": "./node_modules/.bin/eslint client/*.js components/*.js",
     "test-nojsdom": "mocha --compilers js:babel-register tests/**/*.spec.js --require ./tests/test_helper.js --recursive",
-    "test": "mocha tests/.setup.js tests/**/*.spec.js",
+    "test": "mocha --reporter list tests/.setup.js tests/**/*.spec.js",
     "test:watch": "npm test -- --watch"
   },
   "repository": {
