--- a/.eslintrc
+++ b/.eslintrc
@@ -17,15 +17,18 @@
     ],
     "extends": "airbnb",
     "rules": {
-        "semi": [2, "never"],
+        "semi": 2,
         "comma-dangle": [2, "never"],
         "arrow-body-style": [2, "always"],
         "no-console": 0,
         "indent": [2, 4],
         "no-multiple-empty-lines": [2, {"max": 2}],
+        "no-useless-constructor": 2,
+        "no-underscore-dangle": 0,
+        "no-loop-func": 2,
+        "max-len": ["error", 110],
 
         "react/jsx-indent": [2, 4],
         "react/jsx-indent-props": [2, 4]
-
     }
 }
