Update Store & Project

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple todo list app built with React, Redux, Webpack and Eslint",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js --progress -p",
-    "serve": "nodemon server/server.js --ignore components 8080",
+    "serve": "set NODE_ENV=dev && nodemon server/server.js --ignore components 8080",
     "lint": "./node_modules/.bin/eslint client/*.js components/*.js",
     "test-nojsdom": "mocha --compilers js:babel-register tests/**/*.spec.js --require ./tests/test_helper.js --recursive",
     "test": "mocha --reporter list tests/.setup.js tests/**/*.spec.js",
